--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
+html {
+    /* footer support */
+    position: relative;
+    min-height: 100%;
+  }
+
+@font-palette-values --Custom {
+    font-family: Nabla;
+    base-palette: 4;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    color: #ddfdfd;
+    background: #050808;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    font-family: "Nabla";
+    font-palette: --Custom;
+}
+
 .icon {
     font-size: 80px;
     margin-bottom: 10px;
@@ -26,6 +50,8 @@
   }
 
 .main {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     margin-top: 40px;
 }
@@ -63,23 +89,13 @@ button {
 .btn:active {
     background-color: var(--secondary-dark-active);
 }
-@import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
-body {
-    margin: 0;
-    color: #ddfdfd;
-    background: #050808;
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
-    font-family: "Nabla";
-}
-
 
 .bounce-in-top {
 	-webkit-animation: bounce-in-top 1.1s both;
 	        animation: bounce-in-top 1.1s both;
 }
 
- @-webkit-keyframes bounce-in-top {
+@-webkit-keyframes bounce-in-top {
     0% {
       -webkit-transform: translateY(-500px);
               transform: translateY(-500px);
@@ -130,8 +146,8 @@ body {
       -webkit-animation-timing-function: ease-out;
               animation-timing-function: ease-out;
     }
-  }
-  @keyframes bounce-in-top {
+}
+@keyframes bounce-in-top {
     0% {
       -webkit-transform: translateY(-500px);
               transform: translateY(-500px);
@@ -182,5 +198,34 @@ body {
       -webkit-animation-timing-function: ease-out;
               animation-timing-function: ease-out;
     }
+}
+
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+    padding: 10px;
+    color: var(--primary-light);
+    font-size: 20px;
   }
+  
+  .fa-github {
+    display: flex;
+    color: var(--primary-light);
+    font-size: 24px;
+    transition: transform 0.3s ease-in-out;
+    margin-left: 2px;
+    margin-top: 1px;
+    
+  }
+  
+  .fa-github:hover {
+    transform: rotate(360deg) scale(1.2);
+}
 
